# Wagon-RiverFlood

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  dockerfile_streamlit  pyproject.toml  tempFile-00000-of-00001.json
.github/workflows/: deployment.yaml
.streamlit/: config.toml  secrets.toml
bigquery/: schema.yml
dags/: dbt_historical.py  dbt_live.py  historical_ingestion.py  live_ingestion.py  read_historical.py  read_live.py  scd_stations.py
dags/bigquery/: historical_bronze_schema.yml  scd_stations_schema.yml
dags/hubeau/: beam.py  historical.py
dags/utils/: utils.py
dashboards/: advanced.py  gcp.py  map.py
dashboards/images/: graph_data.csv
dashboards/pages/: 1_Overview.py  2_graph.py  Video.py  live.py  page_2.py
dbt_riverflood/: .user.yml  dbt_project.yml  profiles.yml
dbt_riverflood/models/: hubeau_gold.sql  hubeau_gold_latest.sql  hubeau_indicator.sql  hubeau_indicator_latest.sql  hubeau_indicator_recent.sql  schema.yml  sources.yml
dbt_riverflood/models/historical/: historical_raw.sql  hubeau_historical_agg.sql  hubeau_historical_bronze.sql  hubeau_historical_silver.sql  schema.yml
dbt_riverflood/models/live/: hubeau_live_avg.sql  hubeau_live_dedup.sql  hubeau_live_latest.sql  hubeau_live_recent.sql  schema.yml
hubeau-client/: scd_stations_NODAG.py
hubeau-client/hubeau-client/: pyproject.toml
hubeau-client/hubeau-client/hubeau_client/: __init__.py  beam.py  bronze.py  create_tables.py  historical.py
