[tool.poetry]
name = "wagon-riverflood"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
apache-airflow-providers-apache-beam = "^5.7.1"
apache-beam = {extras = ["gcp"], version = "^2.40.0"}
requests = "^2.32.3"
google-cloud = "^0.34.0"
pandas = ">=2.1.2,<2.2"
google-cloud-bigquery = ">=3.4.0,<3.21.0"
ipdb = "^0.13.13"
apache-airflow-providers-google = "^10.21.0"
apache-airflow = "2.7.3"
google-auth = "^2.32.0"
streamlit = "^1.36.0"
streamlit-folium = "^0.22.0"
dbt = "^1.0.0.38.6"
dbt-bigquery = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
